RESOLVED FIXED 242588
AX: WebSpeech only allows use of selected voices
https://bugs.webkit.org/show_bug.cgi?id=242588
Summary AX: WebSpeech only allows use of selected voices
chris fleizach
Reported 2022-07-10 23:26:51 PDT
When using web speech to enumerate and use voices, only voices that are selected in spoken content settings end up being used. Steps To Reproduce: 1. Select Samantha as your spoken content voice for English 2. Go to this codepen https://codepen.io/matt-west/pen/DpmMgE 3. Attempt to use any English voice other than Samantha (or whatever voice you had selected) <rdar://problem/95405693>
Attachments
patch (1.49 KB, patch)
2022-07-10 23:37 PDT, chris fleizach
no flags
patch (1.56 KB, patch)
2022-07-10 23:38 PDT, chris fleizach
no flags
Patch (1.62 KB, patch)
2022-07-10 23:40 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2022-07-10 23:27:02 PDT
chris fleizach
Comment 2 2022-07-10 23:37:47 PDT
chris fleizach
Comment 3 2022-07-10 23:38:05 PDT
chris fleizach
Comment 4 2022-07-10 23:40:27 PDT
EWS
Comment 5 2022-07-11 12:16:59 PDT
Committed 252346@main (b952f39f7f29): <https://commits.webkit.org/252346@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460791 [details].
Note You need to log in before you can comment on or make changes to this bug.