AX: WebSpeech only allows use of selected voices. https://bugs.webkit.org/show_bug.cgi?id=242588

Reviewed by Andres Gonzalez.

The logic for selecting a voice was ignoring if the a voice had been set already.
No great way to test this since it's about choosing the voice that goes into the synthesizer and there's not a callback for that.

* Source/WebCore/platform/cocoa/PlatformSpeechSynthesizerCocoa.mm:
(-[WebSpeechSynthesisWrapper speakUtterance:]):

Canonical link: https://commits.webkit.org/252346@main